[workspace]
members = [".", "wasm", "cli"]
default-members = [".", "wasm", "cli"]

[package]
name = "gpx_kml_convert"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["vilaureu"]
license = "AGPL-3.0-or-later"

[dependencies]
# The gpx repository contains yet-unreleased improvements to timestamp parsing:
# https://github.com/georust/gpx/pull/78
gpx = { git = "https://github.com/georust/gpx", rev = "9c251d903faec5783896b0eae6c643031a9dfdef" }
kml = { version = "0.7.0", default-features = false }
thiserror = "1.0.31"
