[package]
name = "gpx_kml_convert"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["vilaureu"]
license = "AGPL-3.0-or-later"

[dependencies]
# 0.8.6 breaks time handling: https://github.com/georust/gpx/issues/75
gpx = "0.8, <=0.8.5"
kml = { version = "0.4.2", default-features = false }
chrono = "0.4"
thiserror = "1.0"
