[package]
name = "gpx_kml_convert_wasm"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["vilaureu"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 0.2.81 does not generate functional JS bindings
# https://github.com/rustwasm/wasm-bindgen/issues/2961
wasm-bindgen = "0.2.82"
console_error_panic_hook = { version = "0.1.6", optional = true }
gpx_kml_convert = { path = ".." }
